# swagger.json
@@ -7,6 +7,13 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"_36_Enums.Role": {
+				"type": "string",
+				"enum": [
+					"USER",
+					"ADMIN"
+				]
+			},
 			"DefaultSelection_Prisma._36_UserPayload_": {
 				"properties": {
 					"updatedAt": {
@@ -23,6 +30,9 @@
 					"birthDate": {
 						"type": "string",
 						"format": "date-time"
+					},
+					"role": {
+						"$ref": "#/components/schemas/_36_Enums.Role"
 					},
 					"username": {
 						"type": "string"
@@ -45,6 +55,7 @@
 					"createdAt",
 					"pictureUrl",
 					"birthDate",
+					"role",
 					"username",
 					"password",
 					"emailVerified",
@@ -57,7 +68,22 @@
 				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_UserPayload_",
 				"description": "Model User"
 			},
-			"Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate__": {
+			"loginForm": {
+				"properties": {
+					"password": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"password",
+					"email"
+				],
+				"type": "object"
+			},
+			"Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate-or-role__": {
 				"properties": {
 					"email": {
 						"type": "string"
@@ -81,14 +107,14 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate_": {
-				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate__",
+			"Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate-or-role_": {
+				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate-or-role__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"publicUser": {
 				"allOf": [
 					{
-						"$ref": "#/components/schemas/Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate_"
+						"$ref": "#/components/schemas/Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate-or-role_"
 					},
 					{
 						"properties": {
@@ -175,12 +201,43 @@
 						}
 					}
 				]
-			},
+			}
+		},
+		"/users/login": {
 			"post": {
-				"operationId": "CreateUser",
+				"operationId": "Login",
 				"responses": {
 					"201": {
-						"description": "Created",
+						"description": "Logged in",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/loginForm"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/users/register": {
+			"post": {
+				"operationId": "Register",
+				"responses": {
+					"201": {
+						"description": "Registered",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -199,6 +256,9 @@
 										"birthDate": {
 											"type": "string",
 											"format": "date-time"
+										},
+										"role": {
+											"$ref": "#/components/schemas/_36_Enums.Role"
 										},
 										"username": {
 											"type": "string"
@@ -221,6 +281,7 @@
 										"createdAt",
 										"pictureUrl",
 										"birthDate",
+										"role",
 										"username",
 										"password",
 										"emailVerified",
@@ -273,6 +334,9 @@
 											"type": "string",
 											"format": "date-time"
 										},
+										"role": {
+											"$ref": "#/components/schemas/_36_Enums.Role"
+										},
 										"username": {
 											"type": "string"
 										},
@@ -294,6 +358,7 @@
 										"createdAt",
 										"pictureUrl",
 										"birthDate",
+										"role",
 										"username",
 										"password",
 										"emailVerified",
